Reports Funcionality and README file